[package]
name = "pquantum_eth_wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
hex="0.4.3"
pqcrypto-dilithium = "0.4.6"
pqcrypto-traits = "0.3.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version= "1", features = ["full"] }
web3 = "0.17.0"
